--- a/branches/Shaman2/ui/pluginChooserMockup.ui
+++ b/branches/Shaman2/ui/pluginChooserMockup.ui
@@ -19,32 +19,52 @@
       <widget class="QTreeWidget" name="treeWidget" >
        <column>
         <property name="text" >
-         <string/>
+         <string>Name</string>
+        </property>
+       </column>
+       <column>
+        <property name="text" >
+         <string>Status</string>
         </property>
        </column>
        <item>
         <property name="text" >
          <string>Backend Plugins</string>
         </property>
+        <property name="text" >
+         <string/>
+        </property>
        </item>
        <item>
         <property name="text" >
          <string>GUI Plugins</string>
+        </property>
+        <property name="text" >
+         <string/>
         </property>
        </item>
        <item>
         <property name="text" >
          <string>Core Plugins</string>
         </property>
+        <property name="text" >
+         <string/>
+        </property>
        </item>
        <item>
         <property name="text" >
          <string>Data Plugins</string>
         </property>
+        <property name="text" >
+         <string/>
+        </property>
        </item>
        <item>
         <property name="text" >
          <string>Configurator Plugins</string>
+        </property>
+        <property name="text" >
+         <string/>
         </property>
        </item>
       </widget>
@@ -87,9 +107,16 @@
         </widget>
        </item>
        <item>
+        <widget class="Line" name="line_2" >
+         <property name="orientation" >
+          <enum>Qt::Horizontal</enum>
+         </property>
+        </widget>
+       </item>
+       <item>
         <widget class="QPushButton" name="pushButton_5" >
          <property name="text" >
-          <string>About...</string>
+          <string>About Plugin...</string>
          </property>
         </widget>
        </item>
