--- a/trunk/shaman/ui/configDialog.ui
+++ b/trunk/shaman/ui/configDialog.ui
@@ -6,7 +6,7 @@
     <x>0</x>
     <y>0</y>
     <width>811</width>
-    <height>612</height>
+    <height>649</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -77,7 +77,7 @@
         <x>0</x>
         <y>0</y>
         <width>679</width>
-        <height>570</height>
+        <height>607</height>
        </rect>
       </property>
       <layout class="QVBoxLayout" >
@@ -240,7 +240,7 @@
                <string>&lt;!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN" "http://www.w3.org/TR/REC-html40/strict.dtd">
 &lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
 p, li { white-space: pre-wrap; }
-&lt;/style>&lt;/head>&lt;body style=" font-family:'Bitstream Vera Sans'; font-size:10pt; font-weight:400; font-style:normal;">
+&lt;/style>&lt;/head>&lt;body style=" font-family:'Sans Serif'; font-size:10pt; font-weight:400; font-style:normal;">
 &lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-family:'Liberation Sans'; font-size:9pt;">Shaman Manteinance.&lt;/p>
 &lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-family:'Liberation Sans'; font-size:9pt;">Please choose an action from the Drop-Down Menu.&lt;/p>&lt;/body>&lt;/html></string>
               </property>
@@ -258,8 +258,8 @@ p, li { white-space: pre-wrap; }
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>100</width>
-        <height>30</height>
+        <width>679</width>
+        <height>607</height>
        </rect>
       </property>
       <layout class="QGridLayout" >
@@ -410,8 +410,8 @@ p, li { white-space: pre-wrap; }
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>100</width>
-        <height>30</height>
+        <width>679</width>
+        <height>607</height>
        </rect>
       </property>
       <layout class="QGridLayout" >
@@ -425,8 +425,8 @@ p, li { white-space: pre-wrap; }
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>640</width>
-            <height>320</height>
+            <width>659</width>
+            <height>559</height>
            </rect>
           </property>
           <attribute name="title" >
@@ -783,8 +783,8 @@ and Pacman.</string>
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>100</width>
-        <height>30</height>
+        <width>679</width>
+        <height>607</height>
        </rect>
       </property>
       <layout class="QGridLayout" >
@@ -835,6 +835,20 @@ and Pacman.</string>
             </item>
             <item>
              <widget class="QLineEdit" name="supEdit" />
+            </item>
+           </layout>
+          </item>
+          <item row="2" column="0" >
+           <layout class="QHBoxLayout" name="horizontalLayout" >
+            <item>
+             <widget class="QLabel" name="label_21" >
+              <property name="text" >
+               <string>RSync Server:</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QLineEdit" name="rsyncServerEdit" />
             </item>
            </layout>
           </item>
