Ok, fixes everywhere :DDD

--- a/trunk/shaman/ui/upgradeDialog.ui
+++ b/trunk/shaman/ui/upgradeDialog.ui
@@ -13,7 +13,8 @@
    <string>System Upgrade</string>
   </property>
   <property name="windowIcon" >
-   <iconset resource="shaman.qrc" >:/Icons/icons/shaman/shaman-updates-available-32.png</iconset>
+   <iconset resource="shaman.qrc" >
+    <normaloff>:/Icons/icons/shaman/shaman-updates-available-32.png</normaloff>:/Icons/icons/shaman/shaman-updates-available-32.png</iconset>
   </property>
   <layout class="QGridLayout" >
    <item row="1" column="1" >
@@ -41,7 +42,7 @@
          <property name="sizeType" >
           <enum>QSizePolicy::Fixed</enum>
          </property>
-         <property name="sizeHint" >
+         <property name="sizeHint" stdset="0" >
           <size>
            <width>20</width>
            <height>40</height>
@@ -68,7 +69,8 @@
         <string>Abort</string>
        </property>
        <property name="icon" >
-        <iconset resource="shaman.qrc" >:/Icons/icons/dialog-cancel.png</iconset>
+        <iconset resource="shaman.qrc" >
+         <normaloff>:/Icons/icons/dialog-cancel.png</normaloff>:/Icons/icons/dialog-cancel.png</iconset>
        </property>
       </widget>
      </item>
@@ -77,7 +79,7 @@
        <property name="orientation" >
         <enum>Qt::Horizontal</enum>
        </property>
-       <property name="sizeHint" >
+       <property name="sizeHint" stdset="0" >
         <size>
          <width>40</width>
          <height>20</height>
@@ -91,9 +93,13 @@
         <string>Show packages...</string>
        </property>
        <property name="icon" >
-        <iconset resource="shaman.qrc" >:/Icons/icons/view-list-tree.png</iconset>
+        <iconset resource="shaman.qrc" >
+         <normaloff>:/Icons/icons/view-list-tree.png</normaloff>:/Icons/icons/view-list-tree.png</iconset>
        </property>
        <property name="checkable" >
+        <bool>true</bool>
+       </property>
+       <property name="checked" >
         <bool>true</bool>
        </property>
       </widget>
@@ -104,7 +110,8 @@
         <string>Add to Queue</string>
        </property>
        <property name="icon" >
-        <iconset resource="shaman.qrc" >:/Icons/icons/list-add.png</iconset>
+        <iconset resource="shaman.qrc" >
+         <normaloff>:/Icons/icons/list-add.png</normaloff>:/Icons/icons/list-add.png</iconset>
        </property>
       </widget>
      </item>
@@ -114,7 +121,8 @@
         <string>Upgrade Now</string>
        </property>
        <property name="icon" >
-        <iconset resource="shaman.qrc" >:/Icons/icons/dialog-ok-apply.png</iconset>
+        <iconset resource="shaman.qrc" >
+         <normaloff>:/Icons/icons/dialog-ok-apply.png</normaloff>:/Icons/icons/dialog-ok-apply.png</iconset>
        </property>
       </widget>
      </item>
